--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aadit Emmi's Mini Portfolio</title>
@@ -58,4 +59,5 @@
 </pre>
 </center>
 </body>
+
 </html>
